// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableHeader with time column renders correctly 1`] = `
<tr
  class="kbnDocTableHeader"
  data-test-subj="docTableHeader"
>
  <th
    style="width: 24px;"
  />
  <th
    data-test-subj="docTableHeaderField"
  >
    <span
      class="kbnDocTableHeader__actions"
      data-test-subj="docTableHeader-time"
    >
      Time
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Sort time descending"
          class="kbnDocTableHeader__sortChange"
          data-test-subj="docTableHeaderFieldSort_time"
        >
          <span
            data-euiicon-type="sortUp"
          />
        </button>
      </span>
    </span>
  </th>
  <th
    data-test-subj="docTableHeaderField"
  >
    <span
      class="kbnDocTableHeader__actions"
      data-test-subj="docTableHeader-first"
    >
      first
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Remove first column"
          class="kbnDocTableHeader__move"
          data-test-subj="docTableRemoveHeader-first"
        >
          <span
            data-euiicon-type="minus"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Move first column to the right"
          class="kbnDocTableHeader__move"
          data-test-subj="docTableMoveRightHeader-first"
        >
          <span
            data-euiicon-type="sortRight"
          />
        </button>
      </span>
    </span>
  </th>
  <th
    data-test-subj="docTableHeaderField"
  >
    <span
      class="kbnDocTableHeader__actions"
      data-test-subj="docTableHeader-middle"
    >
      middle
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Remove middle column"
          class="kbnDocTableHeader__move"
          data-test-subj="docTableRemoveHeader-middle"
        >
          <span
            data-euiicon-type="minus"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Move middle column to the left"
          class="kbnDocTableHeader__move"
          data-test-subj="docTableMoveLeftHeader-middle"
        >
          <span
            data-euiicon-type="sortLeft"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Move middle column to the right"
          class="kbnDocTableHeader__move"
          data-test-subj="docTableMoveRightHeader-middle"
        >
          <span
            data-euiicon-type="sortRight"
          />
        </button>
      </span>
    </span>
  </th>
  <th
    data-test-subj="docTableHeaderField"
  >
    <span
      class="kbnDocTableHeader__actions"
      data-test-subj="docTableHeader-last"
    >
      last
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Remove last column"
          class="kbnDocTableHeader__move"
          data-test-subj="docTableRemoveHeader-last"
        >
          <span
            data-euiicon-type="minus"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Move last column to the left"
          class="kbnDocTableHeader__move"
          data-test-subj="docTableMoveLeftHeader-last"
        >
          <span
            data-euiicon-type="sortLeft"
          />
        </button>
      </span>
    </span>
  </th>
</tr>
`;

exports[`TableHeader without time column renders correctly 1`] = `
<tr
  class="kbnDocTableHeader"
  data-test-subj="docTableHeader"
>
  <th
    style="width: 24px;"
  />
  <th
    data-test-subj="docTableHeaderField"
  >
    <span
      class="kbnDocTableHeader__actions"
      data-test-subj="docTableHeader-first"
    >
      first
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Remove first column"
          class="kbnDocTableHeader__move"
          data-test-subj="docTableRemoveHeader-first"
        >
          <span
            data-euiicon-type="minus"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Move first column to the right"
          class="kbnDocTableHeader__move"
          data-test-subj="docTableMoveRightHeader-first"
        >
          <span
            data-euiicon-type="sortRight"
          />
        </button>
      </span>
    </span>
  </th>
  <th
    data-test-subj="docTableHeaderField"
  >
    <span
      class="kbnDocTableHeader__actions"
      data-test-subj="docTableHeader-middle"
    >
      middle
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Remove middle column"
          class="kbnDocTableHeader__move"
          data-test-subj="docTableRemoveHeader-middle"
        >
          <span
            data-euiicon-type="minus"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Move middle column to the left"
          class="kbnDocTableHeader__move"
          data-test-subj="docTableMoveLeftHeader-middle"
        >
          <span
            data-euiicon-type="sortLeft"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Move middle column to the right"
          class="kbnDocTableHeader__move"
          data-test-subj="docTableMoveRightHeader-middle"
        >
          <span
            data-euiicon-type="sortRight"
          />
        </button>
      </span>
    </span>
  </th>
  <th
    data-test-subj="docTableHeaderField"
  >
    <span
      class="kbnDocTableHeader__actions"
      data-test-subj="docTableHeader-last"
    >
      last
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Remove last column"
          class="kbnDocTableHeader__move"
          data-test-subj="docTableRemoveHeader-last"
        >
          <span
            data-euiicon-type="minus"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Move last column to the left"
          class="kbnDocTableHeader__move"
          data-test-subj="docTableMoveLeftHeader-last"
        >
          <span
            data-euiicon-type="sortLeft"
          />
        </button>
      </span>
    </span>
  </th>
</tr>
`;
